# ai_agents

dependency_analyzer/: README.md  crewai_flow.html  output-log.json  package-lock.json  package.json  pyproject.toml  updated_package.json  updated_package_1.json
dependency_analyzer/src/dependency_analyzer/: main.py
dependency_analyzer/src/dependency_analyzer/crews/analyze_dependency_crew/: analyze_dependency_crew.py
dependency_analyzer/src/dependency_analyzer/crews/analyze_dependency_crew/config/: agents.yaml  tasks.yaml
dependency_analyzer/src/dependency_analyzer/crews/update_dependency_crew/: update_dependency_crew.py
dependency_analyzer/src/dependency_analyzer/crews/update_dependency_crew/config/: agents.yaml  tasks.yaml
flows-feedback-loop/: README.MD  requirements.txt
flows-feedback-loop/self_evaluation_loop_flow/: pyproject.toml  x_post.txt
flows-feedback-loop/self_evaluation_loop_flow/src/: x_post.txt
flows-feedback-loop/self_evaluation_loop_flow/src/self_evaluation_loop_flow/: main.py
flows-feedback-loop/self_evaluation_loop_flow/src/self_evaluation_loop_flow/crews/poem_crew/: poem_crew.py
my_crew/: README.md  pyproject.toml  report.md
my_crew/src/my_crew/: main.py
my_flow/: README.md  poem.txt  pyproject.toml
my_flow/src/my_flow/: main.py
my_flow/src/my_flow/crews/poem_crew/: poem_crew.py
source_code_analyzer/: README.md  pyproject.toml
source_code_analyzer/src/source_code_analyzer/: crew.py  index.html  main.py
source_code_analyzer/src/source_code_analyzer/config/: agents.yaml  tasks.yaml
(+2 files in other folders)
