[project]
name = "dependency_analyzer"
version = "0.1.0"
description = "dependency_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
kickoff = "dependency_analyzer.main:kickoff"
plot = "dependency_analyzer.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
