[project]
name = "source_code_analyzer"
version = "0.1.0"
description = "source_code_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
source_code_analyzer = "source_code_analyzer.main:run"
run_crew = "source_code_analyzer.main:run"
train = "source_code_analyzer.main:train"
replay = "source_code_analyzer.main:replay"
test = "source_code_analyzer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
